--- a/arch/arm64/configs/cyanogenmod_lettuce-64_defconfig
+++ b/arch/arm64/configs/cyanogenmod_lettuce-64_defconfig
@@ -129,7 +129,6 @@ CONFIG_RD_BZIP2=y
 CONFIG_RD_LZMA=y
 # CONFIG_RD_XZ is not set
 # CONFIG_RD_LZO is not set
-# CONFIG_RD_LZ4 is not set
 CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
@@ -184,7 +183,13 @@ CONFIG_HAVE_PERF_REGS=y
 CONFIG_HAVE_PERF_USER_STACK_DUMP=y
 CONFIG_HAVE_ARCH_JUMP_LABEL=y
 CONFIG_ARCH_WANT_COMPAT_IPC_PARSE_VERSION=y
+CONFIG_HAVE_ARCH_SECCOMP_FILTER=y
+CONFIG_SECCOMP_FILTER=y
+CONFIG_HAVE_CC_STACKPROTECTOR=y
 # CONFIG_CC_STACKPROTECTOR is not set
+CONFIG_CC_STACKPROTECTOR_NONE=y
+# CONFIG_CC_STACKPROTECTOR_REGULAR is not set
+# CONFIG_CC_STACKPROTECTOR_STRONG is not set
 CONFIG_HAVE_ARCH_TRANSPARENT_HUGEPAGE=y
 CONFIG_MODULES_USE_ELF_RELA=y
 CONFIG_CLONE_BACKWARDS=y
@@ -333,11 +338,14 @@ CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 CONFIG_CROSS_MEMORY_ATTACH=y
 # CONFIG_CLEANCACHE is not set
 # CONFIG_USE_USER_ACCESSIBLE_TIMERS is not set
-# CONFIG_ZBUD is not set
 CONFIG_GENERIC_EARLY_IOREMAP=y
 CONFIG_PROCESS_RECLAIM=y
+# CONFIG_ZPOOL is not set
+# CONFIG_ZBUD is not set
+# CONFIG_ZSMALLOC is not set
 # CONFIG_XEN is not set
 CONFIG_FORCE_MAX_ZONEORDER=11
+CONFIG_SECCOMP=y
 
 #
 # Boot options
@@ -839,6 +847,7 @@ CONFIG_BT_HIDP=y
 #
 # Bluetooth device drivers
 #
+# CONFIG_BT_HCISMD is not set
 # CONFIG_BT_HCIBTUSB is not set
 # CONFIG_BT_HCIBTSDIO is not set
 # CONFIG_BT_HCIUART is not set
@@ -880,6 +889,7 @@ CONFIG_RFKILL_LEDS=y
 # CONFIG_CEPH_LIB is not set
 # CONFIG_NFC is not set
 # CONFIG_NFC_QNCI is not set
+# CONFIG_NFC_NQ is not set
 CONFIG_IPC_ROUTER=y
 CONFIG_IPC_ROUTER_SECURITY=y
 
@@ -909,6 +919,8 @@ CONFIG_REGMAP=y
 CONFIG_REGMAP_I2C=y
 CONFIG_REGMAP_SPI=y
 CONFIG_REGMAP_IRQ=y
+CONFIG_REGMAP_SWR=y
+CONFIG_REGMAP_ALLOW_WRITE_DEBUGFS=y
 CONFIG_DMA_SHARED_BUFFER=y
 CONFIG_CMA=y
 # CONFIG_CMA_DEBUG is not set
@@ -1015,6 +1027,7 @@ CONFIG_QSEECOM=y
 # CONFIG_QPNP_MISC is not set
 # CONFIG_TI_DRV2667 is not set
 # CONFIG_QCOM_LIQUID_DOCK is not set
+CONFIG_UID_CPUTIME=y
 # CONFIG_C2PORT is not set
 
 #
@@ -1370,6 +1383,7 @@ CONFIG_INPUT_EVDEV=y
 # CONFIG_INPUT_EVBUG is not set
 CONFIG_INPUT_KEYRESET=y
 CONFIG_INPUT_KEYCOMBO=y
+# CONFIG_SENSORS_HALL is not set
 
 #
 # Input Device Drivers
@@ -1441,6 +1455,7 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_AUO_PIXCIR is not set
 # CONFIG_TOUCHSCREEN_BU21013 is not set
 # CONFIG_TOUCHSCREEN_CY8CTMG110 is not set
+# CONFIG_TOUCHSCREEN_CYPRESS_CYTTSP4 is not set
 # CONFIG_TOUCHSCREEN_CYTTSP_CORE is not set
 # CONFIG_TOUCHSCREEN_DYNAPRO is not set
 # CONFIG_TOUCHSCREEN_HAMPSHIRE is not set
@@ -1475,13 +1490,16 @@ CONFIG_TOUCHSCREEN_GSL1688E_ARM64=y
 # CONFIG_TOUCHSCREEN_ST1232 is not set
 # CONFIG_TOUCHSCREEN_TPS6507X is not set
 # CONFIG_TOUCHSCREEN_FT5X06 is not set
+# CONFIG_TOUCHSCREEN_HIMAX852XES is not set
 # CONFIG_TOUCHSCREEN_MSTAR21XX is not set
 CONFIG_TOUCHSCREEN_GEN_VKEYS=y
 # CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI4 is not set
 # CONFIG_TOUCHSCREEN_GT9XX is not set
-# CONFIG_TOUCHSCREEN_YL_GT9XX is not set
 # CONFIG_TOUCHSCREEN_BU21150 is not set
+# CONFIG_TOUCHSCREEN_MSG2XXX is not set
+# CONFIG_TOUCHSCREEN_PROXIMITY_SENSOR is not set
 # CONFIG_INPUT_MT_WRAPPER is not set
+# CONFIG_TOUCHSCREEN_IT7260_I2C is not set
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_ARIZONA_HAPTICS is not set
@@ -1511,15 +1529,22 @@ CONFIG_INPUT_GPIO=y
 # CONFIG_INPUT_CMA3000 is not set
 # CONFIG_BMP18X is not set
 # CONFIG_SENSORS_MMA8X5X is not set
+# CONFIG_SENSORS_AP3426 is not set
+CONFIG_SENSORS_AP3426_CM=y
+# CONFIG_SENSORS_LTR553 is not set
+# CONFIG_SENSORS_LTR559 is not set
 # CONFIG_SENSORS_MMC3416X is not set
 # CONFIG_SENSORS_AKM09911 is not set
 CONFIG_SENSORS_AKM09911_WT=y
 # CONFIG_SENSORS_AKM8963 is not set
 # CONFIG_SENSORS_STK3X1X is not set
 # CONFIG_SENSORS_CAPELLA_CM36283 is not set
+# CONFIG_INPUT_KIONIX_ACCEL is not set
 # CONFIG_SENSORS_BMA2X2 is not set
-# CONFIG_SENSORS_AP3426 is not set
-CONFIG_SENSORS_AP3426_CM=y
+# CONFIG_SENSORS_BMM050 is not set
+# CONFIG_SENSORS_BMG is not set
+# CONFIG_INPUT_LSM6DX0 is not set
+# CONFIG_SENSORS_ST480 is not set
 
 #
 # Hardware I/O ports
@@ -1676,6 +1701,8 @@ CONFIG_I2C_MSM_V2=y
 CONFIG_SLIMBUS=y
 # CONFIG_SLIMBUS_MSM_CTRL is not set
 CONFIG_SLIMBUS_MSM_NGD=y
+CONFIG_SOUNDWIRE=y
+CONFIG_SOUNDWIRE_WCD_CTRL=y
 CONFIG_SPI=y
 # CONFIG_SPI_DEBUG is not set
 CONFIG_SPI_MASTER=y
@@ -1838,11 +1865,6 @@ CONFIG_BATTERY_BCL=y
 # CONFIG_QPNP_BMS is not set
 # CONFIG_QPNP_LINEAR_CHARGER is not set
 # CONFIG_MSM_BCL_CTL is not set
-# CONFIG_YL_PM8916_VBUS is not set
-# CONFIG_YL_BQ24157_CHARGER is not set
-# CONFIG_YL_FAN5405_CHARGER is not set
-# CONFIG_YL_LC709203_FUELGAUGE is not set
-# CONFIG_YL_CHARGE_MODE is not set
 CONFIG_POWER_RESET=y
 # CONFIG_POWER_RESET_GPIO is not set
 CONFIG_POWER_RESET_MSM=y
@@ -1932,7 +1954,6 @@ CONFIG_HWMON=y
 # CONFIG_SENSORS_EPM_ADC is not set
 CONFIG_SENSORS_QPNP_ADC_VOLTAGE=y
 CONFIG_SENSORS_QPNP_ADC_CURRENT=y
-# CONFIG_NTC_12K_249K is not set
 CONFIG_SENSORS_QPNP_CURRENT_MONITOR=y
 # CONFIG_SENSORS_PC87360 is not set
 # CONFIG_SENSORS_PC87427 is not set
@@ -1985,6 +2006,7 @@ CONFIG_THERMAL_GOV_STEP_WISE=y
 CONFIG_THERMAL_TSENS8974=y
 # CONFIG_LIMITS_MONITOR is not set
 CONFIG_THERMAL_MONITOR=y
+# CONFIG_SUPPLY_LM_MONITOR is not set
 CONFIG_THERMAL_QPNP=y
 CONFIG_THERMAL_QPNP_ADC_TM=y
 # CONFIG_WATCHDOG is not set
@@ -2086,6 +2108,7 @@ CONFIG_MFD_VEGAS=y
 # CONFIG_WCD9320_CODEC is not set
 # CONFIG_WCD9306_CODEC is not set
 # CONFIG_WCD9330_CODEC is not set
+CONFIG_WCD9335_CODEC=y
 CONFIG_REGULATOR=y
 # CONFIG_REGULATOR_DEBUG is not set
 # CONFIG_REGULATOR_DUMMY is not set
@@ -2184,6 +2207,7 @@ CONFIG_MSM_ISPIF=y
 # CONFIG_OV7695 is not set
 # CONFIG_SP1628 is not set
 # CONFIG_GC0339 is not set
+# CONFIG_GC0310 is not set
 # CONFIG_OV8825 is not set
 # CONFIG_OV8865 is not set
 # CONFIG_s5k4e1 is not set
@@ -2478,7 +2502,10 @@ CONFIG_SND_SOC_I2C_AND_SPI=y
 # CONFIG_SND_SOC_ALL_CODECS is not set
 CONFIG_SND_SOC_ARIZONA=y
 CONFIG_SND_SOC_WM_ADSP=y
+CONFIG_SND_SOC_WSA881X=y
 CONFIG_SND_SOC_MSM8X16_WCD=y
+CONFIG_AUDIO_EXT_CLK=y
+CONFIG_SND_SOC_WCD_MBHC=y
 CONFIG_SND_SOC_VEGAS=y
 CONFIG_SND_SOC_MSM_STUB=y
 # CONFIG_SND_SIMPLE_CARD is not set
@@ -2512,6 +2539,7 @@ CONFIG_DRAGONRISE_FF=y
 CONFIG_HID_EMS_FF=y
 CONFIG_HID_ELECOM=y
 CONFIG_HID_EZKEY=y
+# CONFIG_HID_FIIO is not set
 CONFIG_HID_HOLTEK=y
 # CONFIG_HOLTEK_FF is not set
 CONFIG_HID_KEYTOUCH=y
@@ -2843,7 +2871,6 @@ CONFIG_MMC_BLOCK_BOUNCE=y
 # CONFIG_MMC_BLOCK_DEFERRED_RESUME is not set
 # CONFIG_SDIO_UART is not set
 # CONFIG_MMC_TEST is not set
-# CONFIG_MMC_YL_PARAMS is not set
 
 #
 # MMC/SD/SDIO Host Controller Drivers
@@ -2882,9 +2909,11 @@ CONFIG_LEDS_GPIO=y
 # CONFIG_LEDS_QPNP_FLASH is not set
 # CONFIG_LEDS_QPNP_WLED is not set
 CONFIG_LEDS_MSM_GPIO_FLASH=y
+# CONFIG_LEDS_MSM_GPIO_FLASH_CKT is not set
 # CONFIG_LEDS_DAC124S085 is not set
 # CONFIG_LEDS_PWM is not set
 # CONFIG_LEDS_REGULATOR is not set
+# CONFIG_LEDS_AW2013 is not set
 # CONFIG_LEDS_BD2802 is not set
 # CONFIG_LEDS_LT3593 is not set
 # CONFIG_LEDS_RENESAS_TPU is not set
@@ -2892,7 +2921,6 @@ CONFIG_LEDS_MSM_GPIO_FLASH=y
 # CONFIG_LEDS_LM355x is not set
 # CONFIG_LEDS_OT200 is not set
 # CONFIG_LEDS_BLINKM is not set
-# CONFIG_LEDS_AW2013 is not set
 
 #
 # LED Triggers
@@ -3038,7 +3066,6 @@ CONFIG_STAGING=y
 # CONFIG_LINE6_USB is not set
 # CONFIG_USB_SERIAL_QUATECH2 is not set
 # CONFIG_DX_SEP is not set
-# CONFIG_ZSMALLOC is not set
 # CONFIG_FB_SM7XX is not set
 # CONFIG_CRYSTALHD is not set
 # CONFIG_FB_XGI is not set
@@ -3094,6 +3121,20 @@ CONFIG_QCOM_TDLS=y
 CONFIG_WLAN_FEATURE_11W=y
 CONFIG_QCOM_VOWIFI_11R=y
 CONFIG_ENABLE_LINUX_REG=y
+# CONFIG_MACH_CKT is not set
+# CONFIG_MACH_CKT_MSM8939 is not set
+
+#
+# CK Telecom board selection
+#
+# CONFIG_MACH_SPIRIT is not set
+# CONFIG_MACH_LONGCHEER is not set
+# CONFIG_MACH_LONGCHEER_MSM8916 is not set
+
+#
+# LC board selection
+#
+# CONFIG_MACH_CRACKLING is not set
 
 #
 # Qualcomm MSM specific device drivers
@@ -3120,9 +3161,18 @@ CONFIG_MSM_AVTIMER=y
 CONFIG_MSM_BUS_SCALING=y
 # CONFIG_MSM_BUSPM_DEV is not set
 CONFIG_BUS_TOPOLOGY_ADHOC=y
+# CONFIG_DEBUG_BUS_VOTER is not set
+# CONFIG_I2C_MSM_PROF_DBG is not set
 # CONFIG_MSM_UIM_HSL is not set
 # CONFIG_QPNP_HAPTIC is not set
 # CONFIG_SEEMP_CORE is not set
+# CONFIG_MACH_HAIER is not set
+# CONFIG_MACH_HAIER_MSM8916 is not set
+
+#
+# Haier board selection
+#
+# CONFIG_MACH_RENDANG is not set
 CONFIG_MACH_WINGTECH=y
 CONFIG_MACH_WINGTECH_MSM8916=y
 
@@ -3130,28 +3180,6 @@ CONFIG_MACH_WINGTECH_MSM8916=y
 # Wingtech board selection
 #
 CONFIG_MACH_T86519A1=y
-# CONFIG_MACH_YULONG is not set
-# CONFIG_MACH_YULONG_MSM8939 is not set
-
-#
-# Yulong board selection
-#
-# CONFIG_MACH_CP8675 is not set
-
-#
-# Yulong debug selection
-#
-# CONFIG_ANDROID_DEV_DEBUG is not set
-# CONFIG_YULONG_DEBUG is not set
-# CONFIG_YULONG_MODULE_MANAGEMENT is not set
-# CONFIG_YULONG_USB_UART_SWITCH is not set
-# CONFIG_YL_DEBUG is not set
-# CONFIG_APP_PROFILE is not set
-
-#
-# Yulong features
-#
-# CONFIG_YL_POWEROFF_ALARM is not set
 CONFIG_CLKDEV_LOOKUP=y
 CONFIG_HAVE_CLK_PREPARE=y
 # CONFIG_MSM_CLK_CONTROLLER_V2 is not set
@@ -3175,7 +3203,6 @@ CONFIG_MSM_IOMMU_V1=y
 # CONFIG_MSM_IOMMU_VBIF_CHECK is not set
 # CONFIG_IOMMU_NON_SECURE is not set
 # CONFIG_IOMMU_FORCE_4K_MAPPINGS is not set
-# CONFIG_MSM_IOMMU_TLBINVAL_ON_MAP is not set
 # CONFIG_MMU500_ACTIVE_PREFETCH_BUG_WITH_SECTION_MAPPING is not set
 # CONFIG_ARM_SMMU is not set
 
@@ -3228,11 +3255,6 @@ CONFIG_MSM_IRQ=y
 # CONFIG_BIF is not set
 CONFIG_SENSORS=y
 # CONFIG_SENSORS_SSC is not set
-
-#
-# Sensors Device Drivers
-#
-# CONFIG_YL_SENSORS is not set
 
 #
 # PHY Subsystem
@@ -3295,6 +3317,7 @@ CONFIG_MSM_CPU_PWR_CTL=y
 # CONFIG_MSM_PACMAN is not set
 CONFIG_MSM_CORE_CTL_HELPER=y
 CONFIG_MSM_PERFORMANCE=y
+CONFIG_MSM_PERFORMANCE_HOTPLUG_ON=y
 CONFIG_MEM_SHARE_QMI_SERVICE=y
 
 #
@@ -3504,6 +3527,7 @@ CONFIG_DEBUG_KERNEL=y
 # CONFIG_LOCKUP_DETECTOR is not set
 # CONFIG_PANIC_ON_OOPS is not set
 CONFIG_PANIC_ON_OOPS_VALUE=0
+# CONFIG_PANIC_ON_RECURSIVE_FAULT is not set
 # CONFIG_DETECT_HUNG_TASK is not set
 # CONFIG_SCHED_DEBUG is not set
 # CONFIG_PANIC_ON_RT_THROTTLING is not set
